--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "scaffold-davaverse-client-ui",
-  "version": "1.0.0",
-  "description": "A scaffolding tool for creating Dataverse client-side web resource projects with TypeScript",
+  "version": "1.0.2",
+  "description": "A scaffolding tool for creating Dataverse client-side web resource projects with TypeScript, ESLint, Prettier, and Rollup",
   "main": "dist/index.js",
   "files": [
     "dist/",
