--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/node": "^24.0.8",
     "typescript": "^5.8.3"
   },
+  "type": "module",
   "bin": {
     "scaffold-dataverse-client-ui": "./dist/index.js"
   }
